# c-trans

./: pyproject.toml
examples/1_c/: main.c
examples/2_c/: main.c
src/: pyproject.toml
src/transpiler/: ast_converter.py  c_parser.py  main.py
src/transpiler/c_parser/: parser.py
