[tool.poetry]
name = "c-trans"
version = "0.1.0"
description = ""
authors = ["Evgeniy Goncharuck <iterlace.dev@sent.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pydantic = "^1.10.8"
pycparser = "^2.21"
astor = "^0.8.1"

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"
pytest-mock = "3.10.0"
polyfactory = "^1.0.0a1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.black]
target-version = ["py311"]
force-exclude = '''
/(
  \.git
  |\.venv
  |venv
  |\.mypy_cache
  |\.pytest_cache
  |__pycache__
  |__init__\.py
)/
'''
line_length = 88

[tool.isort]
profile = "black"
src_paths = ["isort", "test", "transpiler"]
known_firstparty = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
length_sort = true
line_length = 88
group_by_package = true
skip_glob = "*/venv/*,*/.venv/*,*/__init__.py"

[flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache", "venv", ".venv"]
extend-ignore = ["E203", "E501"]

[tool.pytest.ini_options]
minversion = "7.0"
log_cli = true
log_cli_level = "INFO"
python_files = "tests/*.py"
python_classes = "Test*"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
